prevent stretching of user avatar image on user view page (#1737)

--- a/src/app/_components/user-avatar/user-avatar.component.scss
+++ b/src/app/_components/user-avatar/user-avatar.component.scss
@@ -40,6 +40,10 @@ $avatar-font-color: #fff;
   border-radius: 50%;
 }
 
+.card-avatar-content {
+    object-fit: cover;
+}
+
 .profile-img{
   left: -50px;
   right: 0;
